Refactor to use mongodb instead of SQL
